fixed deprecations with java 11
Signed-off-by: Christian Dietrich <christian.dietrich@itemis.de>